Time: 17 ms (75.24%) | Memory: 47.3 MB (44.74%) - LeetSync